# bowling_game_kata

./: .gitignore  README.md  WindowsTerminal.bat
.github/workflows/: cmake-multi-platform.yml  cmake-multi-platform_c_make.yml  cmake-multi-platform_cxx_cmake.yml  cmake.yml  codeql.yml  codeql_c_cmake.yml  codeql_cxx_cmake.yml  go.yml  msvc_code_analysis.yml
c_cmake/: CMakeLists.txt  README.md  config.bat  config.sh
c_cmake/lib/bowling_game/: CMakeLists.txt
c_cmake/lib/bowling_game/src/: bowling_game.c
c_cmake/lib/bowling_game/test/: bowling_game_test.c
c_cmake/lib/bowling_game/test/assert/: bowling_game_test_assert.c
c_cmake/lib/bowling_game/test/pcunit/: bowling_game_test_pcunit.c
c_cmake/utility/: launch.json.c.in
c_cmake_ninja/: CMakeLists.txt  CMakeLists.txt.bak  config.bat  config_release.bat
c_cmake_ninja/data/: testdata_all_ones.txt  testdata_one_spare.txt  testdata_perfect_game.txt
c_cmake_ninja/lib/bowling_game/test/gtest/: bowling_game_test_gtest.cpp
c_cmake_ninja/lib/bowling_game/test/pcunit/: bowling_game_test_pcunit.c
c_cmake_ninja/src/: CMakeLists.txt  bowling_game.c  bowling_game.h  bowling_game_cli.c  bowling_game_test.c  build_and_run.bat.in  config.bat
c_cmake_ninja/utility/: build_and_test.bat.in  coverage_post_test_process.bat.in  coverage_test_luncher.bat.in  launch.json.c.in  launch.json.in  test_luncher.bat.in
c_meson/: README.md  c_meson.c  meson.build
c_meson/lib/bowling_game/: meson.build
c_meson/lib/bowling_game/src/: bowling_game.c  bowling_game.h
c_meson/src/: bowling_game_cli.c
csharp_cmake/: BowlingGame.cs  BowlingGameCli.cs  CMakeLists.txt  README.md  bowling_game_cli.cs
csharp_cmake/src/: BowlingGame.cs
csharp_dotnet/: README.md
csharp_dotnet/BowlingGameSolution/: BowlingGameSolution.sln
csharp_dotnet/BowlingGameSolution/BowlingGameCli/: BowlingGameCli.csproj  Program.cs
csharp_dotnet/BowlingGameSolution/BowlingGameLib/: BowlingGame.cs  Class1.cs
csharp_dotnet/BowlingGameSolution/BowlingGameLib.Tests/: BowlingGameLib.Tests.csproj  BowlingGameTests.cs  UnitTest1.cs
cxx_cmake/: CMakeLists.txt  README.md  config.bat  config.sh  config_coveraage.bat  config_coveraage.sh
cxx_cmake/lib/bowling_game/: CMakeLists.txt
cxx_cmake/lib/bowling_game/src/: bowling_game.hpp
cxx_cmake/lib/bowling_game/test/assert/: bowling_game_test_assert.cpp
cxx_cmake/lib/bowling_game/test/gtest/: bowling_game_test_gtest.cpp
cxx_cmake/utility/: launch.json.cxx.in
cxx_cmake_ninja/: CMakeLists.txt
cxx_cmake_ninja/lib/bowling_game/src/: bowling_game.cpp
cxx_cmake_ninja/lib/bowling_game/test/: bowling_game_test.cpp
cxx_cmake_ninja/lib/bowling_game/test/assert/: bowling_game_test_assert.cpp
cxx_cmake_ninja/lib/bowling_game/test/gtest/: bowling_game_test_gtest.cpp
cxx_cmake_ninja/src/: bowling_game_cli.cpp
cxx_cmake_ninja/utility/: launch.json.cxx.in
go/: .gitignore  README.md  bowling_game.go  go.mod
go/bowling_game/: main.go
go/bowling_game/bowling_game/: bowling_game.go  bowling_game_test.go
java/: README.md
java/bowling_game/src/: BowlingGame.java  Main.java
java_maven/: README.md
java_maven/BowlingGameKata/: pom.xml
java_maven/BowlingGameKata/src/main/java/steelpipe/: App.java  BowlingGame.java
java_maven/BowlingGameKata/src/test/java/steelpipe/: AppTest.java  BowlingGameTest.java
javascript_bun/: README.md
javascript_bun/bowling_game/: README.md  bowling_game.js  bowling_game.test.js  bun.lockb  index.js  package.json
lua/: README.md
lua/bowling_game/: bowling_game.lua  main.lua  test_bowling_game.lua
nim/: README.md  bowling_game.nimble  bowling_game_cli.nimble  nim.nimble
nim/src/: bowling_game_cli.nim
nim/src/lib/: bowling_game.nim
nim/tests/: test_bowling_game.nim
perl/: README.md
perl/bowling_game/: bowling_game.pm  bowling_game_test.pl  main.pl
php/: README.md
php/bowling_game/: bowling_game.php  bowling_game_test.php  main.php
python/: README.md  __main__.py
python/bowling_game/: bowling_game.py
python/tests/: test_bowling_game.py
ruby/: README.md
ruby/bowling_game/: bowling_game.rb  bowling_game_test.rb  main.rb
rust/: README.md
rust/bowling_game/: Cargo.toml
rust/bowling_game/src/: bowling_game.rs  main.rs
testdata/: testdata_gutter_game.txt  testdata_one_strike.txt
typescript_bun/: README.md  bowling_game.test.ts  bowling_game.ts  bun.lockb  index.ts  package.json
typescript_bun/bowling_game/: bowling_game.test.ts  index.ts
utility/: build_and_test.bat.in  coverage_post_test_process.bat.in  coverage_post_test_process.sh.in  coverage_post_test_process_common.bat.in  coverage_post_test_process_common.sh.in  coverage_test_luncher.sh.in  test_luncher.sh.in
v/: README.md
v/bowling_game/: .gitignore  v.mod
v/bowling_game/src/: main.v
v/bowling_game/src/bowling_game/: bowling_game.v  bowling_game_test.v
zig/: README.md  build.zig
zig/src/: main.zig
zig/src/lib/: bowling_game.zig  bowling_game_test.zig
